--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation("gg.jte:jte:3.1.4")
     implementation("gg.jte:jte-kotlin:3.1.4")
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.9.10"
 }
 
 repositories {
