--- a/sample-android/build.gradle
+++ b/sample-android/build.gradle
@@ -3,13 +3,14 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 30
-    ndkVersion "21.3.6528147"
+    ndkVersion "26.2.11394342"
+    namespace = "io.github.landerlyoung.jennysampleapp"
 
     defaultConfig {
         applicationId "com.young.jennysampleapp"
-        minSdkVersion 16
-        targetSdkVersion 30
+        compileSdkVersion 34
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -18,28 +19,13 @@ android {
                 cppFlags "-std=c++11 -fvisibility=hidden"
             }
         }
-
-        /* for Android Java project
-
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments += [
-                        "jenny.useJniHelper": "true"
-                        "jenny.useTemplates": "true"
-                        "jenny.outputDirectory": project.file('src/main/cpp/gen')
-                        "jenny.templateDirectory": project.file('templates')
-                ]
-            }
-        }
-
-        */
     }
 
-    externalNativeBuild {
-        cmake {
-            path 'src/main/cpp/CMakeLists.txt'
-        }
-    }
+//    externalNativeBuild {
+//        cmake {
+//            path 'src/main/cpp/CMakeLists.txt'
+//        }
+//    }
 
     lintOptions {
         abortOnError false
@@ -55,6 +41,9 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 
     // make sure java compile is executed before ndk compile
     // because we rely on Jenny generating cpp code
@@ -68,17 +57,29 @@ android {
     }
 }
 
+import org.jetbrains.kotlin.gradle.internal.KaptTask
+
+tasks.withType(KaptTask) { task ->
+    def suffix = task.name.contains("kaptDebug") ? "_debug" : "_release"
+
+    annotationProcessorOptionProviders.add([new CommandLineArgumentProvider() {
+        @Override
+        Iterable<String> asArguments() {
+            return ["jenny.templateBuildSuffix=" + suffix]
+        }
+    }])
+}
+
 kapt {
     arguments {
         // pass arguments to jenny
-        // arg("jenny.threadSafe", "false")
+        arg("jenny.threadSafe", "false")
         arg("jenny.errorLoggerFunction", "jennySampleErrorLog")
         arg("jenny.outputDirectory", project.file('src/main/cpp/gen'))
-        arg("jenny.templateDirectory", project.file('templates'))
         arg("jenny.headerOnlyProxy", "false")
         arg("jenny.useJniHelper", "true")
         arg("jenny.useTemplates", "true")
-        // arg("jenny.fusionProxyHeaderName", "JennyFusionProxy.h")
+        arg("jenny.fusionProxyHeaderName", "JennyFusionProxy.h")
     }
 }
 
@@ -134,4 +135,9 @@ task copyGeneratedCpp {
 afterEvaluate {
     // copy file to source after jenny generate
     tasks.kaptDebugKotlin.finalizedBy copyGeneratedCpp
+//    tasks.forEach {
+//        if (it.name.startsWith("buildCMake")) {
+//            it.dependsOn copyGeneratedCpp
+//        }
+//    }
 }
