--- a/sample-android/src/main/AndroidManifest.xml
+++ b/sample-android/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="io.github.landerlyoung.jennysampleapp.MainActivity"
+            android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
