--- a/sample-android/build.gradle
+++ b/sample-android/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.young.jennysampleapp"
-        compileSdkVersion 34
+        compileSdk 34
         minSdkVersion 21
         targetSdkVersion 34
         versionCode 1
@@ -50,7 +50,7 @@ android {
 
     // for library project
     // libraryVariants.all { variant ->
-    applicationVariants.all { variant ->
+    applicationVariants.configureEach { variant ->
         variant.externalNativeBuildProviders*.configure { ndkBuild ->
             ndkBuild.dependsOn variant.javaCompileProvider.name
         }
@@ -59,13 +59,13 @@ android {
 
 import org.jetbrains.kotlin.gradle.internal.KaptTask
 
-tasks.withType(KaptTask) { task ->
+tasks.withType(KaptTask).configureEach { task ->
     def suffix = task.name.contains("kaptDebug") ? "debug" : "release"
 
     annotationProcessorOptionProviders.add([new CommandLineArgumentProvider() {
         @Override
         Iterable<String> asArguments() {
-            return ["jenny.templateBuildDirectory=" + project.file('templates')+"/" + suffix]
+            return ["jenny.templateBuildDirectory=" + project.file('templates') + "/" + suffix]
         }
     }])
 }
@@ -104,7 +104,7 @@ dependencies {
     androidTestImplementation 'androidx.annotation:annotation:1.1.0'
 }
 
-task copyGeneratedCpp {
+tasks.register('copyGeneratedCpp') {
     def generatedDir = "generated/source/kapt/debug"
     doLast {
         copy {
