--- a/sample-android/build.gradle
+++ b/sample-android/build.gradle
@@ -38,11 +38,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = 1.8
-        targetCompatibility = 1.8
+        sourceCompatibility = 21
+        targetCompatibility = 21
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '21'
     }
 
     // make sure java compile is executed before ndk compile
@@ -74,12 +74,12 @@ kapt {
     arguments {
         // pass arguments to jenny
         arg("jenny.threadSafe", "false")
-        arg("jenny.errorLoggerFunction", "jennySampleErrorLog")
+        arg("jenny.errorLoggerFunction", "")
         arg("jenny.outputDirectory", project.file('src/main/cpp/gen'))
         arg("jenny.headerOnlyProxy", "false")
-        arg("jenny.useJniHelper", "true")
+        arg("jenny.useJniHelper", "false")
         arg("jenny.useTemplates", "true")
-        arg("jenny.fusionProxyHeaderName", "JennyFusionProxy.h")
+        arg("jenny.useQjniTemplates", "false")
     }
 }
 
