--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 sourceSets {
@@ -18,7 +18,8 @@ sourceSets {
 dependencies {
     implementation project(':annotation')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation("gg.jte:jte-kotlin:3.1.12")
+    implementation("gg.jte:jte:3.1.4")
+    implementation("gg.jte:jte-kotlin:3.1.4")
 }
 
 repositories {
@@ -26,11 +27,11 @@ repositories {
 }
 compileKotlin {
     kotlinOptions {
-        jvmTarget = "11"
+        jvmTarget = "1.8"
     }
 }
 compileTestKotlin {
     kotlinOptions {
-        jvmTarget = "11"
+        jvmTarget = "1.8"
     }
 }
